third_party/rust/chromium_crates_io/vendor/zerocopy-0.8.23/tests/ui-stable/try_transmute_ref-size-decrease.stderr
error[E0512]: cannot transmute between types of different sizes, or dependently-sized types
  --> tests/ui-stable/try_transmute_ref-size-decrease.rs:19:41
   |
19 |     let decrease_size: Result<&u8, _> = try_transmute_ref!(&AU16(0));
   |                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: source type: `AU16` (16 bits)
   = note: target type: `u8` (8 bits)
   = note: this error originates in the macro `$crate::assert_size_eq` which comes from the expansion of the macro `try_transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)
